--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)
 
 file(MAKE_DIRECTORY ${DATA_DIR})
 file(MAKE_DIRECTORY ${GEN_DIR})
+file(MAKE_DIRECTORY ${GEN_DIR}/tiles)
 file(GLOB COPY_FILES ${RES_DIR}/copied/*)
 file(COPY ${COPY_FILES} DESTINATION ${DATA_DIR})
 
@@ -69,10 +70,98 @@ convertBitmaps(
 		${DATA_DIR}/player_mask.bm ${DATA_DIR}/box_mask.bm ${DATA_DIR}/bouncer_mask.bm
 )
 
+extractBitmaps(
+	TARGET ${GAME_EXECUTABLE} SOURCE ${RES_DIR}/tiles_mockup.png
+	GENERATED_FILE_LIST TILES_FILES
+	DESTINATIONS
+		${GEN_DIR}/tiles/0.png  112 192 8 8 # VIS_TILE_BG_1
+		${GEN_DIR}/tiles/1.png  144 192 8 8 # VIS_TILE_BG_CONVEX_N
+		${GEN_DIR}/tiles/2.png  160 192 8 8 # VIS_TILE_BG_CONVEX_NE
+		${GEN_DIR}/tiles/3.png  160 208 8 8 # VIS_TILE_BG_CONVEX_E
+		${GEN_DIR}/tiles/4.png  160 224 8 8 # VIS_TILE_BG_CONVEX_SE
+		${GEN_DIR}/tiles/5.png  144 244 8 8 # VIS_TILE_BG_CONVEX_S
+		${GEN_DIR}/tiles/6.png  128 224 8 8 # VIS_TILE_BG_CONVEX_SW
+		${GEN_DIR}/tiles/7.png  128 208 8 8 # VIS_TILE_BG_CONVEX_W
+		${GEN_DIR}/tiles/8.png  128 192 8 8 # VIS_TILE_BG_CONVEX_NW
+		${GEN_DIR}/tiles/9.png  184 200 8 8 # VIS_TILE_BG_CONCAVE_NE
+		${GEN_DIR}/tiles/10.png 184 208 8 8 # VIS_TILE_BG_CONCAVE_SE
+		${GEN_DIR}/tiles/11.png 176 208 8 8 # VIS_TILE_BG_CONCAVE_SW
+		${GEN_DIR}/tiles/12.png 176 200 8 8 # VIS_TILE_BG_CONCAVE_NW
+
+		${GEN_DIR}/tiles/13.png   0   0 8 8 # VIS_TILE_WALL_1
+		${GEN_DIR}/tiles/14.png 144 200 8 8 # VIS_TILE_WALL_CONVEX_N
+		${GEN_DIR}/tiles/15.png 152 200 8 8 # VIS_TILE_WALL_CONVEX_NE
+		${GEN_DIR}/tiles/16.png 152 208 8 8 # VIS_TILE_WALL_CONVEX_E
+		${GEN_DIR}/tiles/17.png 152 216 8 8 # VIS_TILE_WALL_CONVEX_SE
+		${GEN_DIR}/tiles/18.png 144 216 8 8 # VIS_TILE_WALL_CONVEX_S
+		${GEN_DIR}/tiles/19.png 136 216 8 8 # VIS_TILE_WALL_CONVEX_SW
+		${GEN_DIR}/tiles/20.png 136 208 8 8 # VIS_TILE_WALL_CONVEX_W
+		${GEN_DIR}/tiles/21.png 136 200 8 8 # VIS_TILE_WALL_CONVEX_NW
+		${GEN_DIR}/tiles/22.png 184 192 8 8 # VIS_TILE_WALL_CONCAVE_N
+		${GEN_DIR}/tiles/23.png 192 192 8 8 # VIS_TILE_WALL_CONCAVE_NE
+		${GEN_DIR}/tiles/24.png 192 208 8 8 # VIS_TILE_WALL_CONCAVE_E
+		${GEN_DIR}/tiles/25.png 192 216 8 8 # VIS_TILE_WALL_CONCAVE_SE
+		${GEN_DIR}/tiles/26.png 176 216 8 8 # VIS_TILE_WALL_CONCAVE_S
+		${GEN_DIR}/tiles/27.png 168 216 8 8 # VIS_TILE_WALL_CONCAVE_SW
+		${GEN_DIR}/tiles/28.png 168 200 8 8 # VIS_TILE_WALL_CONCAVE_W
+		${GEN_DIR}/tiles/29.png 168 192 8 8 # VIS_TILE_WALL_CONCAVE_NW
+
+		${GEN_DIR}/tiles/49.png  16 168 8 8 # VIS_TILE_EXIT_BG_LEFT_TOP
+		${GEN_DIR}/tiles/50.png  16 176 8 8 # VIS_TILE_EXIT_BG_LEFT_MID
+		${GEN_DIR}/tiles/51.png  16 184 8 8 # VIS_TILE_EXIT_BG_LEFT_BOTTOM
+		${GEN_DIR}/tiles/52.png   8 168 8 8 # VIS_TILE_EXIT_WALL_LEFT_TOP
+		${GEN_DIR}/tiles/53.png   8 176 8 8 # VIS_TILE_EXIT_WALL_LEFT_MID
+		${GEN_DIR}/tiles/54.png   8 184 8 8 # VIS_TILE_EXIT_WALL_LEFT_BOTTOM
+		${GEN_DIR}/tiles/55.png 296 168 8 8 # VIS_TILE_EXIT_BG_RIGHT_TOP
+		${GEN_DIR}/tiles/56.png 296 176 8 8 # VIS_TILE_EXIT_BG_RIGHT_MID
+		${GEN_DIR}/tiles/57.png 296 184 8 8 # VIS_TILE_EXIT_BG_RIGHT_BOTTOM
+		${GEN_DIR}/tiles/58.png 304 168 8 8 # VIS_TILE_EXIT_WALL_RIGHT_TOP
+		${GEN_DIR}/tiles/59.png 304 176 8 8 # VIS_TILE_EXIT_WALL_RIGHT_MID
+		${GEN_DIR}/tiles/60.png 304 184 8 8 # VIS_TILE_EXIT_WALL_RIGHT_BOTTOM
+
+		${GEN_DIR}/tiles/61.png 104 232 8 8 # VIS_TILE_BUTTON_BG_LEFT_1
+		${GEN_DIR}/tiles/62.png 112 232 8 8 # VIS_TILE_BUTTON_BG_LEFT_2
+		${GEN_DIR}/tiles/63.png 104 240 8 8 # VIS_TILE_BUTTON_WALL_LEFT_1
+		${GEN_DIR}/tiles/64.png 112 240 8 8 # VIS_TILE_BUTTON_WALL_LEFT_2
+		${GEN_DIR}/tiles/65.png 168 232 8 8 # VIS_TILE_BUTTON_BG_RIGHT_1
+		${GEN_DIR}/tiles/66.png 176 232 8 8 # VIS_TILE_BUTTON_BG_RIGHT_2
+		${GEN_DIR}/tiles/67.png 168 240 8 8 # VIS_TILE_BUTTON_WALL_RIGHT_1
+		${GEN_DIR}/tiles/68.png 176 240 8 8 # VIS_TILE_BUTTON_WALL_RIGHT_2
+
+		${GEN_DIR}/tiles/69.png  32 152 8 8 # VIS_TILE_GATE_LEFT_CLOSED_WALL_TOP
+		${GEN_DIR}/tiles/70.png  32 192 8 8 # VIS_TILE_GATE_LEFT_CLOSED_WALL_BOTTOM
+		${GEN_DIR}/tiles/71.png  32 160 8 8 # VIS_TILE_GATE_LEFT_CLOSED_1
+		${GEN_DIR}/tiles/72.png  32 168 8 8 # VIS_TILE_GATE_LEFT_CLOSED_2
+		${GEN_DIR}/tiles/73.png  32 176 8 8 # VIS_TILE_GATE_LEFT_CLOSED_3
+		${GEN_DIR}/tiles/74.png  32 104 8 8 # VIS_TILE_GATE_LEFT_OPEN_WALL_TOP
+		${GEN_DIR}/tiles/75.png  32 144 8 8 # VIS_TILE_GATE_LEFT_OPEN_WALL_BOTTOM
+		${GEN_DIR}/tiles/76.png  32 112 8 8 # VIS_TILE_GATE_LEFT_OPEN_1
+		${GEN_DIR}/tiles/77.png  32 120 8 8 # VIS_TILE_GATE_LEFT_OPEN_2
+		${GEN_DIR}/tiles/78.png  32 136 8 8 # VIS_TILE_GATE_LEFT_OPEN_3
+		${GEN_DIR}/tiles/79.png 280 152 8 8 # VIS_TILE_GATE_LEFT_CLOSED_WALL_TOP
+		${GEN_DIR}/tiles/80.png 280 192 8 8 # VIS_TILE_GATE_LEFT_CLOSED_WALL_BOTTOM
+		${GEN_DIR}/tiles/81.png 280 160 8 8 # VIS_TILE_GATE_RIGHT_CLOSED_1
+		${GEN_DIR}/tiles/82.png 280 168 8 8 # VIS_TILE_GATE_RIGHT_CLOSED_2
+		${GEN_DIR}/tiles/83.png 280 176 8 8 # VIS_TILE_GATE_RIGHT_CLOSED_3
+		${GEN_DIR}/tiles/84.png 280 104 8 8 # VIS_TILE_GATE_LEFT_OPEN_WALL_TOP
+		${GEN_DIR}/tiles/85.png 280 144 8 8 # VIS_TILE_GATE_LEFT_OPEN_WALL_BOTTOM
+		${GEN_DIR}/tiles/86.png 280 112 8 8 # VIS_TILE_GATE_RIGHT_OPEN_1
+		${GEN_DIR}/tiles/87.png 280 120 8 8 # VIS_TILE_GATE_RIGHT_OPEN_2
+		${GEN_DIR}/tiles/88.png 280 136 8 8 # VIS_TILE_GATE_RIGHT_OPEN_3
+
+)
+
+convertTileset(
+	TARGET ${GAME_EXECUTABLE}
+	SOURCE ${GEN_DIR}/tiles DESTINATION ${GEN_DIR}/tiles.png SIZE 8
+	COLUMN_WIDTH 16
+	TILE_PATHS ${TILES_FILES}
+)
+
 convertBitmaps(
 	TARGET ${GAME_EXECUTABLE} PALETTE ${palette_slipgates_gpl}
 	INTERLEAVED SOURCES
-		${RES_DIR}/tiles.png
+		${GEN_DIR}/tiles.png
 	DESTINATIONS
 		${DATA_DIR}/tiles.bm
 )
