--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,79 +130,79 @@ extractBitmaps(
 
 		${GEN_DIR}/tiles/67.png  32 152 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_WALL_TOP
 		${GEN_DIR}/tiles/68.png  32 192 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_WALL_BOTTOM
-		${GEN_DIR}/tiles/69.png  32 160 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_1
-		${GEN_DIR}/tiles/70.png  32 168 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_2
-		${GEN_DIR}/tiles/71.png  32 184 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_3
-		${GEN_DIR}/tiles/72.png  32 104 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_TOP
-		${GEN_DIR}/tiles/73.png  32 144 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_BOTTOM
-		${GEN_DIR}/tiles/74.png  32 112 8 8 # VIS_TILE_DOOR_LEFT_OPEN_1
-		${GEN_DIR}/tiles/75.png  32 120 8 8 # VIS_TILE_DOOR_LEFT_OPEN_2
-		${GEN_DIR}/tiles/76.png  32 136 8 8 # VIS_TILE_DOOR_LEFT_OPEN_3
-		${GEN_DIR}/tiles/77.png 280 152 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_WALL_TOP
-		${GEN_DIR}/tiles/78.png 280 192 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_WALL_BOTTOM
-		${GEN_DIR}/tiles/79.png 280 160 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_1
-		${GEN_DIR}/tiles/80.png 280 168 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_2
-		${GEN_DIR}/tiles/81.png 280 184 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_3
-		${GEN_DIR}/tiles/82.png 280 104 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_TOP
-		${GEN_DIR}/tiles/83.png 280 144 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_BOTTOM
-		${GEN_DIR}/tiles/84.png 280 112 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_1
-		${GEN_DIR}/tiles/85.png 280 120 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_2
-		${GEN_DIR}/tiles/86.png 280 136 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_3
+		${GEN_DIR}/tiles/69.png  32 160 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_TOP
+		${GEN_DIR}/tiles/70.png  32 168 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_MID
+		${GEN_DIR}/tiles/71.png  32 184 8 8 # VIS_TILE_DOOR_LEFT_CLOSED_BOTTOM
+		${GEN_DIR}/tiles/72.png 280 152 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_WALL_TOP
+		${GEN_DIR}/tiles/73.png 280 192 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_WALL_BOTTOM
+		${GEN_DIR}/tiles/74.png 280 160 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_TOP
+		${GEN_DIR}/tiles/75.png 280 168 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_MID
+		${GEN_DIR}/tiles/76.png 280 184 8 8 # VIS_TILE_DOOR_RIGHT_CLOSED_BOTTOM
+		${GEN_DIR}/tiles/77.png  120  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_WALL_LEFT
+		${GEN_DIR}/tiles/78.png  152  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_WALL_RIGHT
+		${GEN_DIR}/tiles/79.png  128  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_LEFT
+		${GEN_DIR}/tiles/80.png  136  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_MID
+		${GEN_DIR}/tiles/81.png  144  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_RIGHT
+		${GEN_DIR}/tiles/82.png  128  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_LEFT
+		${GEN_DIR}/tiles/83.png  136  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_MID
+		${GEN_DIR}/tiles/84.png  144  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_RIGHT
 
-		${GEN_DIR}/tiles/87.png  120  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_WALL_LEFT
-		${GEN_DIR}/tiles/88.png  152  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_WALL_RIGHT
-		${GEN_DIR}/tiles/89.png  128  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_1
-		${GEN_DIR}/tiles/90.png  136  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_2
-		${GEN_DIR}/tiles/91.png  144  88 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_TOP_3
-		${GEN_DIR}/tiles/92.png  128  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_1
-		${GEN_DIR}/tiles/93.png  136  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_2
-		${GEN_DIR}/tiles/94.png  144  96 8 8 # VIS_TILE_DOOR_DOWN_CLOSED_BOTTOM_3
+		${GEN_DIR}/tiles/85.png  32 104 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_TOP
+		${GEN_DIR}/tiles/86.png  32 144 8 8 # VIS_TILE_DOOR_LEFT_OPEN_WALL_BOTTOM
+		${GEN_DIR}/tiles/87.png  32 112 8 8 # VIS_TILE_DOOR_LEFT_OPEN_TOP
+		${GEN_DIR}/tiles/88.png  32 120 8 8 # VIS_TILE_DOOR_LEFT_OPEN_MID
+		${GEN_DIR}/tiles/89.png  32 136 8 8 # VIS_TILE_DOOR_LEFT_OPEN_BOTTOM
+		${GEN_DIR}/tiles/90.png 280 104 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_WALL_TOP
+		${GEN_DIR}/tiles/91.png 280 144 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_WALL_BOTTOM
+		${GEN_DIR}/tiles/92.png 280 112 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_TOP
+		${GEN_DIR}/tiles/93.png 280 120 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_MID
+		${GEN_DIR}/tiles/94.png 280 136 8 8 # VIS_TILE_DOOR_RIGHT_OPEN_BOTTOM
 		${GEN_DIR}/tiles/95.png  120 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_WALL_LEFT
 		${GEN_DIR}/tiles/96.png  152 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_WALL_RIGHT
-		${GEN_DIR}/tiles/97.png  128 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_1
-		${GEN_DIR}/tiles/98.png  136 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_2
-		${GEN_DIR}/tiles/99.png  144 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_3
-		${GEN_DIR}/tiles/100.png 128 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_1
-		${GEN_DIR}/tiles/101.png 136 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_2
-		${GEN_DIR}/tiles/102.png 144 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_3
+		${GEN_DIR}/tiles/97.png  128 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_LEFT
+		${GEN_DIR}/tiles/98.png  136 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_MID
+		${GEN_DIR}/tiles/99.png  144 104 8 8 # VIS_TILE_DOOR_DOWN_OPEN_TOP_RIGHT
+		${GEN_DIR}/tiles/100.png 128 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_LEFT
+		${GEN_DIR}/tiles/101.png 136 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_MID
+		${GEN_DIR}/tiles/102.png 144 112 8 8 # VIS_TILE_DOOR_DOWN_OPEN_BOTTOM_RIGHT
 
 		${GEN_DIR}/tiles/103.png  48 104 8 8 # VIS_TILE_GRATE_LEFT_WALL_TOP
 		${GEN_DIR}/tiles/104.png  48 144 8 8 # VIS_TILE_GRATE_LEFT_WALL_BOTTOM
-		${GEN_DIR}/tiles/105.png  48 112 8 8 # VIS_TILE_GRATE_LEFT_1
-		${GEN_DIR}/tiles/106.png  48 120 8 8 # VIS_TILE_GRATE_LEFT_2
-		${GEN_DIR}/tiles/107.png  48 128 8 8 # VIS_TILE_GRATE_LEFT_3
+		${GEN_DIR}/tiles/105.png  48 112 8 8 # VIS_TILE_GRATE_LEFT_TOP
+		${GEN_DIR}/tiles/106.png  48 120 8 8 # VIS_TILE_GRATE_LEFT_MID
+		${GEN_DIR}/tiles/107.png  48 136 8 8 # VIS_TILE_GRATE_LEFT_BOTTOM
 		${GEN_DIR}/tiles/108.png 264 104 8 8 # VIS_TILE_GRATE_RIGHT_WALL_TOP
 		${GEN_DIR}/tiles/109.png 264 144 8 8 # VIS_TILE_GRATE_RIGHT_WALL_BOTTOM
-		${GEN_DIR}/tiles/110.png 264 112 8 8 # VIS_TILE_GRATE_RIGHT_1
-		${GEN_DIR}/tiles/111.png 264 120 8 8 # VIS_TILE_GRATE_RIGHT_2
-		${GEN_DIR}/tiles/112.png 264 128 8 8 # VIS_TILE_GRATE_RIGHT_3
+		${GEN_DIR}/tiles/110.png 264 112 8 8 # VIS_TILE_GRATE_RIGHT_TOP
+		${GEN_DIR}/tiles/111.png 264 120 8 8 # VIS_TILE_GRATE_RIGHT_MID
+		${GEN_DIR}/tiles/112.png 264 136 8 8 # VIS_TILE_GRATE_RIGHT_BOTTOM
 		${GEN_DIR}/tiles/113.png 120 128 8 8 # VIS_TILE_GRATE_DOWN_WALL_LEFT
 		${GEN_DIR}/tiles/114.png 152 128 8 8 # VIS_TILE_GRATE_DOWN_WALL_RIGHT
-		${GEN_DIR}/tiles/115.png 128 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_1
-		${GEN_DIR}/tiles/116.png 136 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_2
-		${GEN_DIR}/tiles/117.png 144 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_3
-		${GEN_DIR}/tiles/118.png 128 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_1
-		${GEN_DIR}/tiles/119.png 136 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_2
-		${GEN_DIR}/tiles/120.png 144 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_3
+		${GEN_DIR}/tiles/115.png 128 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_LEFT
+		${GEN_DIR}/tiles/116.png 136 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_MID
+		${GEN_DIR}/tiles/117.png 144 120 8 8 # VIS_TILE_GRATE_DOWN_TOP_RIGHT
+		${GEN_DIR}/tiles/118.png 128 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_LEFT
+		${GEN_DIR}/tiles/119.png 136 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_MID
+		${GEN_DIR}/tiles/120.png 144 128 8 8 # VIS_TILE_GRATE_DOWN_BOTTOM_RIGHT
 
 		${GEN_DIR}/tiles/121.png 112  56 8 8 # VIS_TILE_DEATH_FIELD_LEFT_WALL_TOP
 		${GEN_DIR}/tiles/122.png 112  88 8 8 # VIS_TILE_DEATH_FIELD_LEFT_WALL_BOTTOM
-		${GEN_DIR}/tiles/123.png 112  64 8 8 # VIS_TILE_DEATH_FIELD_LEFT_1
-		${GEN_DIR}/tiles/124.png 112  72 8 8 # VIS_TILE_DEATH_FIELD_LEFT_2
-		${GEN_DIR}/tiles/125.png 112  80 8 8 # VIS_TILE_DEATH_FIELD_LEFT_3
+		${GEN_DIR}/tiles/123.png 112  64 8 8 # VIS_TILE_DEATH_FIELD_LEFT_TOP
+		${GEN_DIR}/tiles/124.png 112  72 8 8 # VIS_TILE_DEATH_FIELD_LEFT_MID
+		${GEN_DIR}/tiles/125.png 112  80 8 8 # VIS_TILE_DEATH_FIELD_LEFT_BOTTOM
 		${GEN_DIR}/tiles/126.png 176  56 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_WALL_TOP
 		${GEN_DIR}/tiles/127.png 176  88 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_WALL_BOTTOM
-		${GEN_DIR}/tiles/128.png 176  64 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_1
-		${GEN_DIR}/tiles/129.png 176  72 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_2
-		${GEN_DIR}/tiles/130.png 176  80 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_3
+		${GEN_DIR}/tiles/128.png 176  64 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_TOP
+		${GEN_DIR}/tiles/129.png 176  72 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_MID
+		${GEN_DIR}/tiles/130.png 176  80 8 8 # VIS_TILE_DEATH_FIELD_RIGHT_BOTTOM
 		${GEN_DIR}/tiles/131.png 120 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_WALL_LEFT
 		${GEN_DIR}/tiles/132.png 152 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_WALL_RIGHT
-		${GEN_DIR}/tiles/133.png 128 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_1
-		${GEN_DIR}/tiles/134.png 136 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_2
-		${GEN_DIR}/tiles/135.png 144 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_3
-		${GEN_DIR}/tiles/136.png 128 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_1
-		${GEN_DIR}/tiles/137.png 136 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_2
-		${GEN_DIR}/tiles/138.png 144 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_3
+		${GEN_DIR}/tiles/133.png 128 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_LEFT
+		${GEN_DIR}/tiles/134.png 136 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_MID
+		${GEN_DIR}/tiles/135.png 144 136 8 8 # VIS_TILE_DEATH_FIELD_DOWN_TOP_RIGHT
+		${GEN_DIR}/tiles/136.png 128 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_LEFT
+		${GEN_DIR}/tiles/137.png 136 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_MID
+		${GEN_DIR}/tiles/138.png 144 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_RIGHT
 
 		${GEN_DIR}/tiles/143.png 224 240 8 8 # VIS_TILE_SPIKES_OFF_FLOOR_1
 		${GEN_DIR}/tiles/144.png 232 240 8 8 # VIS_TILE_SPIKES_ON_FLOOR_1
