autotiles for bouncer spawners and receivers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,15 +204,33 @@ extractBitmaps(
 		${GEN_DIR}/tiles/137.png 136 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_MID
 		${GEN_DIR}/tiles/138.png 144 144 8 8 # VIS_TILE_DEATH_FIELD_DOWN_BOTTOM_RIGHT
 
-		${GEN_DIR}/tiles/143.png 224 240 8 8 # VIS_TILE_SPIKES_OFF_FLOOR_1
-		${GEN_DIR}/tiles/144.png 232 240 8 8 # VIS_TILE_SPIKES_ON_FLOOR_1
-		${GEN_DIR}/tiles/145.png 224 232 8 8 # VIS_TILE_SPIKES_OFF_BG_1
-		${GEN_DIR}/tiles/146.png 232 232 8 8 # VIS_TILE_SPIKES_ON_BG_1
+		${GEN_DIR}/tiles/139.png 168  80 8 8 # VIS_TILE_RECEIVER_BG_UP
+		${GEN_DIR}/tiles/140.png 168  88 8 8 # VIS_TILE_RECEIVER_WALL_UP
+		${GEN_DIR}/tiles/141.png 168 160 8 8 # VIS_TILE_RECEIVER_BG_DOWN
+		${GEN_DIR}/tiles/142.png 168 152 8 8 # VIS_TILE_RECEIVER_WALL_DOWN
+		${GEN_DIR}/tiles/143.png  96 104 8 8 # VIS_TILE_RECEIVER_BG_LEFT
+		${GEN_DIR}/tiles/144.png 104 104 8 8 # VIS_TILE_RECEIVER_WALL_LEFT
+		${GEN_DIR}/tiles/145.png 192 104 8 8 # VIS_TILE_RECEIVER_BG_RIGHT
+		${GEN_DIR}/tiles/146.png 184 104 8 8 # VIS_TILE_RECEIVER_WALL_RIGHT
 
-		${GEN_DIR}/tiles/147.png 272 224 8 8 # VIS_TILE_TURRET_ACTIVE_LEFT
-		${GEN_DIR}/tiles/148.png 288 224 8 8 # VIS_TILE_TURRET_ACTIVE_RIGHT
-		${GEN_DIR}/tiles/149.png 240 224 8 8 # VIS_TILE_TURRET_INACTIVE_LEFT
-		${GEN_DIR}/tiles/150.png 256 224 8 8 # VIS_TILE_TURRET_INACTIVE_RIGHT
+		${GEN_DIR}/tiles/147.png 160 80 8 8 # VIS_TILE_BOUNCER_SPAWNER_BG_UP
+		${GEN_DIR}/tiles/148.png 160 88 8 8 # VIS_TILE_BOUNCER_SPAWNER_WALL_UP
+		${GEN_DIR}/tiles/149.png 160 160 8 8 # VIS_TILE_BOUNCER_SPAWNER_BG_DOWN
+		${GEN_DIR}/tiles/150.png 160 152 8 8 # VIS_TILE_BOUNCER_SPAWNER_WALL_DOWN
+		${GEN_DIR}/tiles/151.png  96  96 8 8 # VIS_TILE_BOUNCER_SPAWNER_BG_LEFT
+		${GEN_DIR}/tiles/152.png 104  96 8 8 # VIS_TILE_BOUNCER_SPAWNER_WALL_LEFT
+		${GEN_DIR}/tiles/153.png 192  96 8 8 # VIS_TILE_BOUNCER_SPAWNER_BG_RIGHT
+		${GEN_DIR}/tiles/154.png 184  96 8 8 # VIS_TILE_BOUNCER_SPAWNER_WALL_RIGHT
+
+		${GEN_DIR}/tiles/157.png 224 240 8 8 # VIS_TILE_SPIKES_OFF_FLOOR_1
+		${GEN_DIR}/tiles/158.png 232 240 8 8 # VIS_TILE_SPIKES_ON_FLOOR_1
+		${GEN_DIR}/tiles/159.png 224 232 8 8 # VIS_TILE_SPIKES_OFF_BG_1
+		${GEN_DIR}/tiles/160.png 232 232 8 8 # VIS_TILE_SPIKES_ON_BG_1
+
+		${GEN_DIR}/tiles/161.png 272 224 8 8 # VIS_TILE_TURRET_ACTIVE_LEFT
+		${GEN_DIR}/tiles/162.png 288 224 8 8 # VIS_TILE_TURRET_ACTIVE_RIGHT
+		${GEN_DIR}/tiles/163.png 240 224 8 8 # VIS_TILE_TURRET_INACTIVE_LEFT
+		${GEN_DIR}/tiles/164.png 256 224 8 8 # VIS_TILE_TURRET_INACTIVE_RIGHT
 )
 
 convertTileset(
