--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,6 +281,8 @@ extractBitmaps(
 		${GEN_DIR}/tiles/192.png 288 224 8 8 # VIS_TILE_TURRET_ACTIVE_RIGHT
 		${GEN_DIR}/tiles/193.png 240 224 8 8 # VIS_TILE_TURRET_INACTIVE_LEFT
 		${GEN_DIR}/tiles/194.png 256 224 8 8 # VIS_TILE_TURRET_INACTIVE_RIGHT
+		${GEN_DIR}/tiles/195.png 240 208 8 8 # VIS_TILE_TURRET_SHOOTING_LEFT
+		${GEN_DIR}/tiles/196.png 256 208 8 8 # VIS_TILE_TURRET_SHOOTING_RIGHT
 )
 
 convertTileset(
