add audio  mixer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_C_STANDARD 11)
 # ACE
 set(ACE_BOB_WRAP_Y OFF)
 add_subdirectory(deps/ace ace)
+add_subdirectory(deps/ace_audio_mixer ace_audio_mixer)
+
 file(GLOB_RECURSE GAME_src src/*.c src/*.h)
 
 set(GAME_EXECUTABLE_STEM slipgates)
@@ -38,7 +40,7 @@ endif()
 target_include_directories(${GAME_EXECUTABLE} PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_compile_options(${GAME_EXECUTABLE} PUBLIC -Wall -Wextra -Wimplicit-fallthrough=2)
 target_compile_options(${GAME_EXECUTABLE} PRIVATE -Werror -Wno-error=unused-parameter -Wimplicit-fallthrough=2)
-target_link_libraries(${GAME_EXECUTABLE} ace)
+target_link_libraries(${GAME_EXECUTABLE} ace_audio_mixer ace)
 if(GAME_DEBUG)
   target_compile_definitions(${GAME_EXECUTABLE} PRIVATE GAME_DEBUG)
 endif()
