sync ace_audio_mixer with aminer

--- a/deps/ace_audio_mixer/CMakeLists.txt
+++ b/deps/ace_audio_mixer/CMakeLists.txt
@@ -8,4 +8,18 @@ target_include_directories(ace_audio_mixer PUBLIC ${CMAKE_CURRENT_LIST_DIR}/incl
 target_include_directories(ace_audio_mixer PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(ace_audio_mixer PUBLIC ace)
 
+if(AUDIO_MIXER_WORD_SIZED)
+	target_compile_definitions(ace_audio_mixer PUBLIC MIXER_WORDSIZED)
+endif()
+
+if(AUDIO_MIXER_68020)
+	target_compile_definitions(ace_audio_mixer PUBLIC MIXER_68020)
+endif()
+
+if(AUDIO_MIXER_HW_CHANNEL_MODE STREQUAL "SINGLE")
+	target_compile_definitions(ace_audio_mixer PUBLIC MIXER_SINGLE)
+elseif(AUDIO_MIXER_HW_CHANNEL_MODE STREQUAL "MULTI_PAIRED")
+	target_compile_definitions(ace_audio_mixer PUBLIC MIXER_MULTI_PAIRED)
+endif()
+
 target_sources(ace_audio_mixer INTERFACE ${MIXER_OBJ_FILE})
