--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_C_STANDARD 11)
 set(ACE_BOB_WRAP_Y OFF)
 add_subdirectory(deps/ace ace)
 
+set(AUDIO_MIXER_WORD_SIZED OFF)
 set(AUDIO_MIXER_HW_CHANNEL_MODE SINGLE)
 set(AUDIO_MIXER_HW_CHANNELS 3)
 set(AUDIO_MIXER_SW_CHANNEL_COUNT 2)
